fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -147,17 +147,20 @@ body {
 
 #right 
 {
+
 	width: 25%; 
 	color:white;
 	font-size:19px;
 	margin-top: 20px;
-
+	/*padding-right:2px;*/
 	text-align:right;
+
 	
 	
 	
 }
 .button{
+  margin-right: 20px;
   background-color: #4CAF50; /* Green */
   border: none;
   color: white;
